# md-to-docx

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: build_checks.sh
