[tool.poetry]
name = "md-to-docx"
version = "0.1.0"
description = "Python project to convert markdown files to docx"
authors = ["Mark Kerollos <markkerollos@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
